# new_robot

follow_waypoints/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
follow_waypoints/scripts/: pub_waypoints.py  read.py
follow_waypoints/src/follow_waypoints/: follow_waypoints.py  follow_waypoints_copy.py
learning_joy/: CMakeLists.txt  package.xml  turtle_teleop_joy
learning_joy/launch/: joy.launch
learning_joy/src/: turtle_teleop_joy_copy.cpp
new_robot/: CMakeLists.txt  package.xml
new_robot/launch/: amcl_diff.launch  ekf_move_base.launch  localization_local_node.launch  urdf.launch
new_robot/param/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
new_robot/urdf/: robot.urdf
rplidar_ros/costmapparam/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  global_costmap_params.yaml~  local_costmap_params.yaml  local_costmap_params.yaml~  teb_local_planner_params.yaml
rplidar_ros/costmaps/: base_local_planner_params.yaml  costmap_common_params.yaml  costmap_common_params.yaml~  global_costmap_params.yaml  global_costmap_params.yaml~  local_costmap_params.yaml~  teb_local_planner_params.yaml
rplidar_ros/launch/: ekf_localization_global_node.launch  ekf_localization_local_node.launch~  ekf_move_base.launch  ekf_move_base.launch~  move_base.launch  robot_pose_ekf.launch  trajectory_hector.launch  urdf.launch
rplidar_ros/param/: ekf_param.yaml  teb_local_planner_params.yaml
rplidar_ros/urdf/: robot.urdf~  (+2 more)
